crates/stackable-versioned/tests/snapshots/conversions__fail@wrong_kind.json.snap
---
source: crates/stackable-versioned/tests/conversions.rs
expression: formatted
input_file: crates/stackable-versioned/tests/inputs/conversions/fail/wrong_kind.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "failed to parse object: unexpected object kind \"SomeOtherResource\", expected \"Person\"",
      "reason": "failed to parse object: unexpected object kind \"SomeOtherResource\", expected \"Person\""
    },
    "convertedObjects": []
  }
}
